htdocs/t/mybar/mybar.css
/* ... */
#the-main-menu .nav .link { margin-right: 20px; }
#the-main-menu .nav .link .count { vertical-align: super; font-size: 8px; margin-left: 3px; text-decoration: none; }
#the-main-menu .center { position: relative; width: 922px; margin: 0 auto; }
#the-main-menu.fixed { position: fixed; }

#the-main-menu .nav .link.shop { color: #EC5197; }


html.loading .please-wait { display: block; }
html.loading .main-box { display: none; }
.please-wait { display: none; text-align: center; font-size: 19px; line-height: 39px; color: #fff; }
.hidden { visibility: hidden; position: absolute !important; top: -20000px !important; background: none !important; }
.main-box .wrapper-box { margin: 0 0 20px 0; }
.main-box .wrapper-box .section-wrapper { padding: 20px; position: relative; }
.main-box .wrapper-box .section-head { position: relative; }
.main-box .wrapper-box .section-head .links { position: absolute; right: 28px; top: 8px; }
.single-box { margin: 0 0 20px 0; height: 42px; position: relative; background: url("mybar.png") no-repeat -11px -103px transparent; }

/*ingredient-previews*/
.main-box .ingredient-preview { display: block; font-size: 12px; text-align: center; position: relative; width: 100px; height: 100px; }
.main-box .ingredient-preview .image { width: 100px; height: 100px; -moz-border-radius: 10px 10px 10px 10px; -webkit-border-radius: 10px 10px 10px 10px; border-radius: 10px 10px 10px 10px; background-color: #eee; margin-bottom: 5px; }
.main-box .ingredient-preview .name { -ms-word-wrap: break-word; word-wrap: break-word; }
.main-box .ingredient .control { position: absolute; width: 32px; height: 32px; background: url("mybar.png") no-repeat -984px -417px transparent; left: -15px; top: -15px; display: none; cursor: pointer; }
.main-box .ingredient:hover .control { display: block; }

/*coctail-previews*/
.main-box .cocktail-preview { font-size: 12px; text-align: center; height: 120px; position: relative; width: 100px; }
.main-box .cocktail-preview a { display: block; color: #000; }
.main-box .cocktail-preview img { display: block; height: 80px; margin: 0 auto; padding-bottom: 7px; }
.main-box .cocktail-preview .control { position: absolute; width: 32px; height: 32px; background: url("mybar.png") no-repeat -984px -417px transparent; left: 10px; top: -3px; cursor: pointer; display: none; }

/*ingredients-box*/
.main-box .ingredients-box .section-head .bar-name-editable { position: relative; top: -1px; background: none; border: medium none; outline: none; color: inherit; display: block; float: left; font-size: inherit; color: #fff; font-weight: bold; text-shadow: inherit; width: 600px; }
.main-box .ingredients-box .section-head .advice { font-size: 10px; font-weight: normal; position: absolute; top: 32px; left: 140px; }
.main-box .ingredients-box .search-box { height: 45px; position: relative; }
.main-box .ingredients-box .search-box button { font-size: 14px; height: 35px; vertical-align: middle; }
.main-box .ingredients-box .search-box .search-button { width: 87px; }
.main-box .ingredients-box .search-box .lucky-button { width: 107px; display: none; }
.main-box .ingredients-box .search-box .autocomplete { display: none; border: solid #ddd; border-width: 0px 1px 1px 1px; background: #fff; background: rgba(255,255,255,0.9); font-size: 20px; }
.main-box .ingredients-box .search-box .autocomplete.focused { display: block; }
.main-box .ingredients-box .search-box .autocomplete .empty-message { display: none; }
.main-box .ingredients-box .search-box .autocomplete.empty .empty-message { display: block; }
.main-box .ingredients-box .search-box .autocomplete .item { padding: 2px 0 4px 5px; cursor: pointer; }
.main-box .ingredients-box .search-box .autocomplete .item.selected { background-color: #e5e5e5; }
.main-box .ingredients-box .search-box .autocomplete .item .substr { font-weight: bold; }
.main-box .ingredients-box .search-box .autocomplete .item .hint { font-size: 0.6em; color: #aaa; vertical-align: middle; }
.main-box .ingredients-box .search-box .autocomplete .empty-message { display: none; color: #000; }
.main-box .ingredients-box .search-box .query { width: 816px; font-size: 24px; vertical-align: middle; color: inherit; }
.main-box .ingredients-box .ingredients-list,
.main-box .maybe-have-box .ingredients-list { margin: 20px 0 0 2px; }
.main-box .ingredients-box .ingredients-list ul.by-list { padding-top: 10px; position: relative; }
.main-box .ingredients-box .ingredients-list dt.group-name { overflow: hidden; margin: 0 0 10px; position: relative; left: -40px; }
.main-box .ingredients-box .ingredients-list dt.group-name .name-wrapper { position: relative; float: left; height: 37px; color: #fff; font-size: 14px; background: url("mybar.png") no-repeat -295px -490px transparent; padding: 0 4px 0px 12px; margin-right: 8px; line-height: 31px; }
.main-box .ingredients-box .ingredients-list dt.group-name .name-wrapper i { position: absolute; display: block; width: 8px; height: 40px; right: -8px; top: 0; background: url("mybar.png") no-repeat -537px -490px transparent; }
.main-box .ingredients-box .ingredients-list dd.group { margin-bottom: 35px; }
.main-box .ingredients-box .ingredients-list ul,
.main-box .maybe-have-box .ingredients-list ul { overflow: hidden; }
.main-box .ingredients-box .ingredients-list ul { padding-top: 10px; }
html.msie-7 .main-box .ingredients-box .ingredients-list ul { padding-bottom: 30px; }
.main-box .ingredients-box .ingredients-list .ingredient,
.main-box .maybe-have-box .ingredients-list .ingredient { float: left; height: 140px; margin: 0 0 17px 17px; position: relative; }
.main-box .ingredients-box .ingredient:hover .control,
.main-box .maybe-have-box .ingredient:hover .control { display: block; }
.main-box .ingredients-box .empty-box { margin: 15px 0px; }
.main-box .ingredients-box .empty-box .image { display: block; margin: 0 auto; }
.main-box .ingredients-box .switcher { position: absolute; width: 40px; height: 84px; right: -40px; top: 116px; }
/* ... */

